# gemini-proxy-key-rotation-rust

./: .dockerignore  .dockerignore.optimized  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_TEST_COVERAGE.md  CONTRIBUTING.md  Cargo.toml  DASHBOARD_IMPROVEMENTS.md  DOCUMENTATION_UPDATE_REPORT.md  Dockerfile  Dockerfile.optimized  FINAL_TEST_COVERAGE_REPORT.md  FIXED_TESTS_REPORT.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_IMPROVEMENTS.md  LICENSE  MONITORING.md  Makefile  PROJECT_STATUS_REPORT.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  SECURITY_CRITICAL_IMPROVEMENTS.md  SECURITY_IMPROVEMENTS.md  TESTS_SUMMARY.md  TIMEOUT_CHANGES.md  build-fast.sh  check-build-context.sh  config.example.yaml  config.good.yaml  config.yaml  config.yaml.example  deny.toml  docker-compose.fast.yml  docker-compose.monitoring.yml  (+13 more)
.cargo/: config.toml
.github/: container-structure-test.yaml
.github/workflows/: ci.yml
benches/: proxy_performance.rs  tokenizer_benchmark.rs
config/: gemini-tokenizer.yaml  multimodal-example.yaml
coverage_report/: lcov.info  tarpaulin-report.html
docs/: CONFIGURATION_ARCHITECTURE.md  GEMINI_TOKENIZER.md  MULTIMODAL_README.md  MULTIMODAL_TOKENIZATION.md  OFFICIAL_TOKENIZER_SETUP.md  TOKENIZATION_GUIDE.md  TOKENIZER_CALIBRATION_RESULTS.md  TOKENIZER_PERFORMANCE.md  openapi.yaml
examples/: circuit_breaker_demo.rs  tokenizer_comparison.rs
k8s/: deployment.yaml
monitoring/: prometheus.yml  redis.conf
scripts/: automated-monitoring.sh  docker-optimize.sh  google-api-monitor.sh  redis-health-check.sh
src/: admin.rs  cache.rs  circuit_breaker.rs  cli.rs  config.rs  config_watcher.rs  error.rs  handler.rs  key_manager.rs  key_manager_v2.rs  lib.rs  main.rs  metrics.rs  proxy.rs  state.rs  tokenizer.rs
src/config/: app.rs  environment.rs  loader.rs  mod.rs  validation.rs
src/core/: health_check.rs  key_rotation.rs  mod.rs
src/error/: context.rs  handlers.rs  mod.rs  types.rs
src/handlers/: base.rs  invalid_api_key.rs  mod.rs  processor.rs  proxy_loop.rs  rate_limit.rs  server_error.rs  success.rs  terminal_error.rs  timeout.rs
src/metrics/: collectors.rs  exporters.rs  middleware.rs  mod.rs
src/middleware/: admin_auth.rs  mod.rs  rate_limit.rs  request_size_limit.rs
src/monitoring/: key_health.rs  mod.rs
src/security/: mod.rs  token_manager.rs
src/storage/: key_state.rs  memory.rs  mod.rs  redis.rs  traits.rs
src/tokenizer/: gemini.rs  gemini_calibrated.rs  gemini_first.rs  gemini_ml_calibrated.rs  gemini_simple.rs  modern.rs  multimodal.rs  official_google.rs  proxy_cached.rs  smart_parallel.rs
src/utils/: crypto.rs  mod.rs  performance.rs
static/: dashboard.html  keys_management.html  style.css
tests/: admin_integration_tests.rs  cache_tests.rs  calibrated_tokenizer_test.rs  circuit_breaker_tests.rs  config_module_tests.rs  config_tests.rs  error_handling_tests.rs  error_module_tests.rs  google_api_token_comparison.rs  handlers_tests.rs  integration_tests.rs  key_manager_simple_tests.rs  large_text_tokenizer_test.rs  lib_module_tests.rs  main_integration_tests.rs  main_tests.rs  middleware_tests.rs  ml_calibrated_tokenizer_test.rs  model_specific_blocking_tests.rs  model_specific_blocking_tests.rs.disabled  monitoring_tests.rs  performance_comparison_test.rs  realistic_performance_test.rs  refactoring_tests.rs  security_tests.rs  server_error_handler_tests.rs  simple_circuit_breaker_tests.rs  smart_parallel_test.rs  storage_tests.rs  streaming_fix_test.rs  streaming_tests.rs  system_integration_tests.rs  token_error_message_test.rs  token_validation_test.rs  ultimate_tokenizer_comparison.rs
tests/common/: mod.rs
