[package]
name = "gemini-proxy-key-rotation-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gemini-proxy-key-rotation-rust"
path = "src/main.rs"

[[example]]
name = "circuit_breaker_demo"
path = "examples/circuit_breaker_demo.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
cookie = { version = "0.18.0", features = ["private", "signed"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14.0"
log = "0.4.21"
env_logger = "0.11.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
url = "2.5.0"
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.10.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-util = { version = "0.1.3", features = ["full"] }
http = "1.1.0"
axum-extra = { version = "0.9.6", features = ["tracing", "typed-header", "cookie", "cookie-private"] }
uuid = { version = "1.8.0", features = ["v4"] }
sysinfo = { version = "0.36.1", features = ["serde"] }
md5 = "0.7.0"
thiserror = "1.0"
futures-util = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
deadpool-redis = "0.15.0"
once_cell = "1.19.0"
tokenizers = "0.19.1"
hf-hub = "0.3.2"
hex = "0.4.3"
secrecy = { version = "0.8", features = ["serde"] }
tower-http = { version = "0.5", features = ["timeout"] }
tokio-util = "0.7"
async-trait = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
wiremock = "0.6.0"
tempfile = "3.10.1"
serial_test = "3.0.0"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum-test = "15.0.0"
rstest = "0.21.0"
tracing-subscriber = "0.3"
